--- a/templates/back/utilisateur/index.html.twig
+++ b/templates/back/utilisateur/index.html.twig
@@ -7,7 +7,6 @@
        
       <link rel="stylesheet" href="{{ asset('back/css/styles.css') }}">
 
-
         <table class="table">
             <thead>
                 <tr>
@@ -42,9 +41,13 @@
                         <td colspan="11">pas d'utilisateurs trouvés</td>
                     </tr>
                 {% endif %}
+                {{ knp_pagination_render(utilisateurs) }}
             </tbody>
+
         </table>
+        
 
         <a href="{{ path('app_utilisateur_new') }}">Ajouter un nouveau utilisateur</a>
+ 
     {% endblock %}
 {% endblock %}
