--- a/templates/baseBack.html.twig
+++ b/templates/baseBack.html.twig
@@ -19,12 +19,13 @@
             <!-- Sidebar Toggle-->
             <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
             <!-- Navbar Search-->
-            <form action="{{ path('app_utilisateur_index') }}" method="GET" class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
-                <div class="input-group">
-                    <input type="text" name="search" class="form-control" placeholder="Recherche par email, nom ou prénoms">
-                    <button class="btn btn-primary" id="btnNavbarSearch" type="button"><i class="fas fa-search"></i></button>
-                </div>
-            </form>
+           <form id="search-form" action="{{ path('app_utilisateur_index') }}" method="GET" class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
+    <div class="input-group">
+        <input type="text" name="search" class="form-control" placeholder="Recherche par email, nom ou prénoms" id="search-input">
+<button class="btn btn-primary" id="btnNavbarSearch" type="submit"><i class="fas fa-search"></i></button>
+    </div>
+</form>
+
             <!-- Navbar-->
             <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
     <li class="nav-item dropdown">
@@ -662,6 +663,29 @@
                 </footer>
             </div>
         </div>
+        <script>
+document.getElementById('btnNavbarSearch').addEventListener('click', function() {
+    var input = document.getElementById('search-input');
+    var query = input.value;
+
+    if (query.length < 3) {
+        return;
+    }
+
+    var xhr = new XMLHttpRequest();
+    xhr.open('GET', '{{ path('app_utilisateur_index') }}?search=' + query, true);
+
+    xhr.onload = function() {
+        if (xhr.status === 200) {
+            var results = JSON.parse(xhr.responseText);
+            // Handle the search results here
+            console.log(results);
+        }
+    };
+
+    xhr.send();
+});
+</script>
         <script src="{{asset('https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js')}}" crossorigin="anonymous"></script>
         <script src="{{asset('js/scripts.js')}}"></script>
         <script src="{{asset('https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js')}}" crossorigin="anonymous"></script>
