--- a/templates/back/planning/edit.html.twig
+++ b/templates/back/planning/edit.html.twig
@@ -6,10 +6,10 @@
 {% block body %}
     <h1>Edit Planning</h1>
 
-    {{ include('planning/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('back/planning/_form.html.twig', {'button_label': 'Update'}) }}
 
     <a href="{{ path('app_planning_index') }}">back to list</a>
 
-    {{ include('planning/_delete_form.html.twig') }}
+    {{ include('back/planning/_delete_form.html.twig') }}
 {% endblock %}
 {% endblock %}
