--- a/templates/back/planning/new.html.twig
+++ b/templates/back/planning/new.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>Create new Planning</h1>
 
-    {{ include('planning/_form.html.twig') }}
+    {{ include('back/planning/_form.html.twig') }}
 
     <a href="{{ path('app_planning_index') }}">back to list</a>
 {% endblock %}
