--- a/templates/back/planning/show.html.twig
+++ b/templates/back/planning/show.html.twig
@@ -31,6 +31,6 @@
 
     <a href="{{ path('app_planning_edit', {'idPlanning': planning.idPlanning}) }}">edit</a>
 
-    {{ include('planning/_delete_form.html.twig') }}
+    {{ include('back/planning/_delete_form.html.twig') }}
 {% endblock %}
 {% endblock %}
