--- a/templates/baseBack.html.twig
+++ b/templates/baseBack.html.twig
@@ -19,7 +19,7 @@
             <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
             <form id="search-form" action="{{ path('app_events_index') }}" method="GET" class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
     <div class="input-group">
-        <input type="text" name="search" class="form-control" placeholder="Recherche des événements" id="search-input">
+        <input type="text" name="search" class="form-control" placeholder="Recherche par email, nom ou prénoms" id="search-input">
 <button class="btn btn-primary" id="btnNavbarSearch" type="submit"><i class="fas fa-search"></i></button>
     </div>
 </form>
