--- a/templates/panier/produits.html.twig
+++ b/templates/panier/produits.html.twig
@@ -23,7 +23,7 @@
                                 <div class="form-group">
                                     <div class="input-group">
                                         <div class="input-group-prepend">
-                                            <span class="input-group-text">Quantité</span>
+                                            <span class="input-group-text">Nombre de participants</span>
                                         </div>
                                         <input type="number" name="quantite" class="form-control" value="1" min="1">
                                     </div>
