--- a/templates/front/show_events.html.twig
+++ b/templates/front/show_events.html.twig
@@ -30,37 +30,39 @@
                             </td>
                         </tr>
                     {% endfor %}
-                            {{ knp_pagination_render(events) }}
-
                 </tbody>
             </table>
         </div>
     </div>
 
-    <style>
-        #qrcode-container {
-            text-align: center;
-        }
-        .qrcode {
-            width: 100px;
-            height: 100px;
-            margin: 20px auto;
-        }
-    </style>
 
-    <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
-    <p>QR Code Generator</p>
+<style>
+    #qrcode-container {
+        text-align: center;
+    }
+    .qrcode {
+        width: 100px;
+        height: 100px;
+        margin: 20px auto;
+    }
+</style>
 
-    <script>
-        // Function to generate the Google Calendar URL with event name and date
-        function generateGoogleCalendarUrl(eventName, eventDate) {
-            var baseUrl = 'https://calendar.google.com/calendar/render?action=TEMPLATE&text=';
-            var encodedName = encodeURIComponent(eventName);
-            var encodedDate = encodeURIComponent(eventDate);
-            var url = baseUrl + encodedName + '&dates=' + encodedDate + '/' + encodedDate;
-            return url;
-        }
 
+
+<script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
+
+<script>
+    // Function to generate the Google Calendar URL with event name and date
+    function generateGoogleCalendarUrl(eventName, eventDate) {
+        var baseUrl = 'https://calendar.google.com/calendar/render?action=TEMPLATE&text=';
+        var encodedName = encodeURIComponent(eventName);
+        var encodedDate = encodeURIComponent(eventDate);
+        var url = baseUrl + encodedName + '&dates=' + encodedDate + '/' + encodedDate;
+        return url;
+    }
+
+    // Wrap the QR code generation script in an event listener for DOMContentLoaded
+    document.addEventListener('DOMContentLoaded', function() {
         // Loop through all events and generate QR codes
         {% for event in events %}
             var eventName{{ loop.index }} = "{{ event.nom }}";
@@ -68,9 +70,10 @@
             var calendarUrl{{ loop.index }} = generateGoogleCalendarUrl(eventName{{ loop.index }}, eventDate{{ loop.index }});
             var qrcode{{ loop.index }} = new QRCode(document.getElementById("qrcode{{ loop.index }}"), {
                 text: calendarUrl{{ loop.index }},
-                width: 50,
-                height: 50
+                width: 100, // Adjust width and height as needed
+                height: 100
             });
         {% endfor %}
-    </script>
+    });
+</script>
 {% endblock %}
