--- a/templates/front/navbar.html.twig
+++ b/templates/front/navbar.html.twig
@@ -13,6 +13,12 @@
         <a href="{{ path('app_myprofile') }}" class="nav-item nav-link">Mon compte</a>
     {% elseif app.user.role == "Admin" %}
         <a href="{{ path('app_utilisateur_index') }}" class="nav-item nav-link">Gérer les utilisateurs</a>
+         {% elseif app.user.role == "Formateur" %}
+               <a href="{{ path('app_formation_index_back') }}" class="nav-item nav-link">Gérer les cours</a>
+
+    {% elseif app.user.role == "RH" %}
+             <a href="{{ path('app_partnership_index') }}" class="nav-item nav-link">Gérer récrutement</a>
+
     {% endif %}
 {% endif %}
 
