--- a/templates/baseBack.html.twig
+++ b/templates/baseBack.html.twig
@@ -48,7 +48,7 @@
                             <div class="sb-sidenav-menu-heading">Core</div>
                             <a class="nav-link" href="{{asset('/utilisateur')}}">
                                 <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                                Tableau de bord des utilisateurs
+                                Tableau de bord utilisateur
                             </a>
                             <a class="nav-link" href="{{asset('/code/promo')}}">
                                 <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
